--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -2,12 +2,6 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="DeskNote.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="AppName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">DeskNote</Value>
-    </Setting>
-    <Setting Name="Release" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">1.3.4</Value>
-    </Setting>
     <Setting Name="CtrlKey" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
@@ -49,6 +43,12 @@
     </Setting>
     <Setting Name="Height" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">250</Value>
+    </Setting>
+    <Setting Name="AppName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">DeskNote</Value>
+    </Setting>
+    <Setting Name="Release" Type="System.String" Scope="User">
+      <Value Profile="(Default)">1.3.5</Value>
     </Setting>
   </Settings>
 </SettingsFile>
