--- a/app.config
+++ b/app.config
@@ -66,7 +66,7 @@
                 <value>250</value>
             </setting>
             <setting name="Release" serializeAs="String">
-                <value>1.4.1</value>
+                <value>1.4.2</value>
             </setting>
             <setting name="ResizeOnW" serializeAs="String">
                 <value>250</value>
@@ -76,6 +76,12 @@
             </setting>
             <setting name="ResizeOnH" serializeAs="String">
                 <value>100</value>
+            </setting>
+            <setting name="AutoArrange" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AutoArrangeMode" serializeAs="String">
+                <value>0</value>
             </setting>
         </DeskNote.Properties.Settings>
     </userSettings>
